--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pm2-meteor",
-  "version": "0.3.5",
+  "version": "0.3.9",
   "bin": "lib/program.js",
   "description": "Simplest way to deploy, scale and run Meteor Apps with PM2.",
   "main": "lib/pm2-meteor.js",
@@ -20,7 +20,8 @@
     "deployment",
     "meteorite",
     "git deployment",
-    "nodejs"
+    "nodejs",
+    "nvm"
   ],
   "author": "andruschka <fritz.andrej@me.com> (http://github.com/andruschka)",
   "license": "MIT",
