--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "abs": "^1.0.0",
     "async": "^1.4.2",
     "cli": "^0.11.0",
-    "nodemiral": "^1.1.1",
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "inquirer": "^3.0.6",
+    "nodemiral": "^1.1.1"
   }
 }
